--- a/public/less/style.less
+++ b/public/less/style.less
@@ -52,12 +52,12 @@ td {
 }
 td.title {
 		text-align: left;
-		white-space: nowrap;
 
 		a {
 			text-decoration: none;
 			padding: 6px 0 6px 10px;
 			border-left: 5px solid;
+			display: inline-block;
 		}
 		p {
 			margin: 0;
